C-04: hacer persistencia de notas segura